fix: added scroll on overflow for listing on mobile

--- a/react-ad-campaigns/app/components/ui-campaign-listing/ui-campaign-listing.module.css
+++ b/react-ad-campaigns/app/components/ui-campaign-listing/ui-campaign-listing.module.css
@@ -37,4 +37,12 @@
         flex-direction: column;
         gap: 10px
     }
+
+    .listing {
+        overflow-x: scroll;
+    }
+
+    .listing > div {
+        width: 430px
+    }
 }
