--- a/react-ad-campaigns/app/ui-kit/ui-pagination/ui-pagination.module.css
+++ b/react-ad-campaigns/app/ui-kit/ui-pagination/ui-pagination.module.css
@@ -6,7 +6,6 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
-    margin: 20px;
 }
 
 .page {
